--- a/info.html
+++ b/info.html
@@ -4,6 +4,7 @@
 <head>
     <title>Sunday Sketching</title>
     <meta name="description" content="Our first page">
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
 
     <link rel="stylesheet" href="style.css">
 
