--- a/sketch.html
+++ b/sketch.html
@@ -7,7 +7,8 @@
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
 
     <link rel="stylesheet" href="style.css">
-    <script src="./js/custom-fabric.js"></script>
+    <script src="./js/fabric.js"></script>
+    <script src="./js/brush.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/510/fabric.min.js"></script> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 
     <script type="text/javascript" src="js/menu.js" defer></script> 
-    <script type="text/javascript" src="js/brush.js" defer></script> 
+    <!-- <script type="text/javascript" src="js/brush.js" defer></script>  -->
     <script type="text/javascript" src="js/canvas.js" defer></script> 
 </head>
 
