--- a/sketch.html
+++ b/sketch.html
@@ -32,6 +32,7 @@
             Look for your sunday sketch on our <a>Tumblr page</a>.
         </div>
         <div class="toolbar">
+            <input id="size" type="range" min="1" max="100" step="1" value="15">
             <img id="pen" onclick="changeAction(this)" src="./imgs/tools/pen.png"/>
             <img id="erase" onclick="changeAction(this)" src="./imgs/tools/eraser.png"/>
             <img id="select" onclick="changeAction(this)" src="./imgs/tools/select.png"/>
