--- a/sketch.html
+++ b/sketch.html
@@ -31,8 +31,10 @@
             <span id="save">Download it</span> and <a>send it our way</a>. Then...<br/><br/>
             Look for your sunday sketch on our <a>Tumblr page</a>.
         </div>
-        <div class="toolbar">
+        <div class="brushsize-container">
             <input id="size" type="range" min="1" max="100" step="1" value="15">
+        </div>
+        <div class="toolbar">
             <img id="pen" onclick="changeAction(this)" src="./imgs/tools/pen.png"/>
             <img id="erase" onclick="changeAction(this)" src="./imgs/tools/eraser.png"/>
             <img id="select" onclick="changeAction(this)" src="./imgs/tools/select.png"/>
