--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>Sketch a drawing incorporating the given object.</li><br/>
                 <li>Download your sketch onto your computer.</li><br/>
                 <li>Submit your sketch to us...</li><br/>
-                <li>Look for your sketch on our Tumblr page!</li>
+                <li>Look for your sketch on our <a href="https://sunday-sketching.tumblr.com/">Tumblr page</a>!</li>
             </ol>
             <br/>
             <div class="home-button-wrapper">
