--- a/sketch.html
+++ b/sketch.html
@@ -31,8 +31,8 @@
         <div id="tab" class="control-tab" onclick="toggleMenu()">Done?</div>
         <div id="menu" class="control-container hideMenu">
             Done?<br/><br/>
-            <span id="save">Download it</span> and <a>send it our way</a>, or <span id='copy'>copy it</span> to share with your friends. Then...<br/><br/>
-            Look for your sunday sketch on our <a>Tumblr page</a>.
+            <span id="save">Download it</span> and <a href="https://forms.gle/HfHsVgT2qkaA3ZM76" target="_blank">send it our way</a>, or <span id='copy'>copy it</span> to share with your friends. Then...<br/><br/>
+            Look for your sunday sketch on our <a href="https://sunday-sketching.tumblr.com/" target="_blank">Tumblr page</a>.
         </div>
         <div class="brushsize-container">
             <input id="size" type="range" min="10" max="100" step="1" value="15">
