--- a/sketch.html
+++ b/sketch.html
@@ -31,8 +31,8 @@
         <div id="tab" class="control-tab" onclick="toggleMenu()">Done?</div>
         <div id="menu" class="control-container hideMenu">
             Done?<br/><br/>
-            <span id="save">Download it</span> and <a>send it our way</a>, or <span id='copy'>copy it</span> to share with your friends. Then...<br/><br/>
-            Look for your sunday sketch on our <a>Tumblr page</a>.
+            <span id="save">Download it</span> to <a>send it our way</a>. Then...<br/><br/>
+            Look for your sunday sketch on our <a>Tumblr page</a>. Or <span id='copy'>copy it</span> to share with your friends!
         </div>
         <div class="brushsize-container">
             <input id="size" type="range" min="1" max="100" step="1" value="15">
