--- a/sketch.html
+++ b/sketch.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
 
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/510/fabric.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/510/fabric.min.js"></script> -->
     <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 
