--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </ol>
             <br/>
             <div class="home-button-wrapper">
-                <!-- <a href="sketch.html"><button>Start</button></a> -->
-                <p class="waiting-notification">The sketchpad will open Sunday, Nov. 20, 2022.</p>
+                <a href="sketch.html"><button>Start</button></a>
+                <!-- <p class="waiting-notification">The sketchpad will open Sunday, Nov. 20, 2022.</p> -->
             </div>
         </div><br/>
         <div class="dog-container">
